stylesheets/style.css
@media (max-width:767px){
	#nav {
		display:none;
	}
	#logo {
		width:40px;
	}
	.menubar {
		padding: 10px 10px 0px!important;
	}
	#btn-aboutme {
		margin-top:55px !important;
	}
	.footer-right {
		margin-top: -62px;
	}
	.button3, .button4{
		height: 468px !important;
	}
	.col-sm-7 {
		height:470px !important;
	}
}
::selection{
	background:none;
	}
::-webkit-scrollbar{
	width:8px;
	height:8px;
	z-index:-6px;
	}
::-webkit-scrollbar-track{
	background:white;
	}
::-webkit-scrollbar-thumb{
	opacity:1;
	background:#e5e5e5;
	border-radius:5px;
	}
::-webkit-scrollbar-thumb:hover{
	background:#828282;
	opacity:1;
	}
h1{
	font: 50px century gothic;
	color: #40413f;
	text-align:center;
	}
h2{
	font: 16px century gothic;
	color: #40413f;
	text-align:center;
	margin:15px;
	}
h3{
	/*background-color: #0bb572;*/
	font:35px Century Gothic;
	color:#FFFFFF;
	padding:8px;
	padding-left:40px;
	}
h4{
	background-color: #0bb572;
	font:35px Century Gothic;
	color:#FFFFFF;
	padding:15px;
	transform:rotate(-90deg);
	}
p{
	font:14px Century Gothic;
	color:40413f;
	margin:15px;
	}
body {
	overflow-x:hidden;
	}
a:link{
	font:14px Century Gothic;
	color:#11b672;
	}
[class*="col-"] {
	padding:2px;
}
iframe {
	width:100%;
	height:100%;
	margin:0;
	margin-top: 50px;
	padding:0;
	border:none;
}
span {
	margin: 10px;
}
#cnt-iframe {
	position:absolute;
	left:0;
	right:0;
	bottom:0;
	top:0;
}
#iframe-calc {

}
.wrapper-nav-panel {
	width:1280px;
	margin-left:auto;
	margin-right:auto;
	}
.wrapper-main-content table, tr, td{
	border-spacing:0px;
	}
.base{
	margin:0px;
	}
.header{
	border-bottom:8px #000000;
	display:block;
	}
.menubar{
	width:100%;
	padding: 10px 10px 0px 10px;
	border-spacing:0px;
	background-color:#FFFFFF;
	border-bottom: 4px solid #FFFFFF;
	box-shadow: 0px 10px 10px hsla(0,0%,0%,0.3);
	-webkit-box-shadow: 0px 10px 10px rgba(86, 86, 86, 0.5);
	-moz-box-shadow: 0px 10px 10px rgba(86, 86, 86, 0.5);

	z-index:99;
	}
.menu{
	padding-right:20px;
	padding-left:20px;
	}
.panel{ 
	overflow-x:scroll;
	overflow-y:hidden;
	white-space:nowrap;
	} 

ul{
	list-style-type:none;
	margin-top:20px;
	}
li{
	display:inline;
	}
div{
	/*width:1280px;*/
	}
.menubar button{
	color:#40413f;
	}
.menubar button:hover{
	color:#828282;
	}
.menubar button:onclick{
	box-shadow:none;
	border:none;
	}
.menubutton{
	background:none;
	border:none;
	font:14px Century Gothic;
	color:#40413f;
	}
.wrapper-main-content{
	}
footer{
	font:14px Century Gothic;
	color:#40413f;
	padding:30px;
	}
.footer-left {
	padding-top:20px;
	padding-left:10px;
}
.footer-right{
	padding-right:0px;
	}
.wrapper-content table{
	padding:0px;
	margin:0px;
	}
.wrapper-main-content body{
	align:center
	}
.button1{
	background: url(../images/1_1.png) center;
	background-size:cover;
	box-shadow:none;
	border:none;
	width:426px;
	height:426px;
	transition: background 1s linear;
	line-height:5px;
	position:right;
	
	}
.button1:hover{
	background:
	linear-gradient(
		rgba(255,255,255,0),
		rgba(255,255,255,0.8)
	),
	url(../images/1.png) center;
	background-size:cover;
	transition: background 1s linear;
	}
.text1 {
	opacity:0;
	transition:opacity 0.5s linear;
	font:50px Century Gothic;
	color:#40413f;
	line-height:normal;
	margin-top:200px;
}
.text1-description {
	opacity:0;
	transition:opacity 0.5s linear;
	font: 17px Century Gothic;
	color:#40413f;
	line-height:normal;
}
.button1:hover .text1{
	opacity:1;
	}
.button1:hover .text1-description{
	opacity:1;
	}
.button2{
	background: url(../images/2_1.jpg) left;
	background-size:cover;
	box-shadow:none;
	border:none;
	width:426px;
	height:426px;
	transition: background 1s linear;
	line-height:5px;
	position:right;
	}
.button2:hover{
	background:
	linear-gradient(
		rgba(255,255,255,0),
		rgba(255,255,255,0.8)
	),
	url(../images/2.png) left;
	background-size:cover;
	transition: background 1s linear;
	}
.button2:hover .text1{
	opacity:1;
	}
.button2:hover .text1-description{
	opacity:1;
	}
.button3{
	background: url(../images/3_1.png) no-repeat center;
	background-size:contain;
	background-color: #757575;
	box-shadow:none;
	border:none;
	width:852px;
	height:852px;
	transition: background 1s ease;
	line-height:5px;
	position:right;
	}
.button3:hover{
	background:
	linear-gradient(
		rgba(255,255,255,0),
		rgba(255,255,255,0.8)
	),
	url(../images/3.png) no-repeat center;
	background-size:contain;
	transition: background 1s ease;
	}
.button3:hover .text1{
	opacity:1;
	}
.button3:hover .text1-description{
	opacity:1;
	}
.button4{
	background: url(../images/4_1.png) center;
	background-size:cover;
	box-shadow:none;
	border:none;
	width:852px;
	height:852px;
	transition: background 1s linear;
	line-height:5px;
	position:center;
	}
.button4:hover{
	background:
	linear-gradient(
		rgba(255,255,255,0),
		rgba(255,255,255,0.8)
	),
	url(../images/4.png) center;
	background-size:cover;
	transition: background 1s linear;
	}
.button4:hover .text1{
	opacity:1;
	}
.button4:hover .text1-description{
	opacity:1;
	}
.button5{
	width:426px;
	height:426px;
	}
.button6{
	width:426px;
	height:426px;
	}
.button5{
	background: url(../images/5_1.jpg) center;
	background-size:cover;
	box-shadow:none;
	border:none;
	width:426px;
	height:426px;
	transition: background 1s linear;
	line-height:5px;
	position:center;
	}
.button5:hover{
	background:
	linear-gradient(
		rgba(255,255,255,0),
		rgba(255,255,255,0.8)
	),
	url(../images/5.jpg) center;
	background-size:cover;
	transition: background 1s linear;
	}
.button5:hover .text1{
	opacity:1;
	}
.button5:hover .text1-description{
	opacity:1;
	}
.button6{
	background: url(../images/6_1.jpg) right;
	background-size:cover;
	box-shadow:none;
	border:none;
	width:426px;
	height:426px;
	transition: background 1s linear;
	line-height:5px;
	position:right;
	}
.button6:hover{
	background:
	linear-gradient(
		rgba(255,255,255,0),
		rgba(255,255,255,0.8)
	),
	url(../images/6.jpg) center;
	background-size:cover;
	transition: background 1s linear;
	}
.button6:hover .text1{
	opacity:1;
	}
.button6:hover .text1-description{
	opacity:1;
	}
#btn-aboutme {
    margin: 0;
    margin-top: 60px;
    padding: 0;
    border: none;
}
.mypicture:hover {
	opacity:0.7;
	transition: all .6s ease;
}
#aboutme {
	padding: 30px;
}
.full-width {
	width: 100%;
	max-width:1280px;
	margin: auto;
}
.panel{
	border-spacing:0px;
	padding:0px;
	margin:0px;
	}
.panel ul, li{
	position:center;
	border-spacing:0px;
	padding:0px;
    width:100%;
	margin:-2px;
	margin-top:92px;
	}
form{
	font:14px century gothic;
	color:#40413f;
	line-height:20px;
	}
input{
	width:400px;
	}
.input-message{
	height:100px;
	}
.button0{
	border:0px;
	width:100px;
	height:30px;
	background-color:#40413f;
	font: 14px Century gothic;
	color: #FFFFFF;
	}
.button0:hover{
	border:0px;
	width:100px;
	height:30px;
	background-color:#828282;
	font: 14px Century gothic;
	color: #FFFFFF;
	}
.paragraph-block{
	margin:0px;
	}
.thumbnails img{
	height:80px;
	border:none;
	margin:-1px;
	padding:0px;
	}
.preview img{
	width:inherit;
	height:500px;
	border:none;
	padding:0px;
	margin-bottom:-4px;

	}
.snippet {
	width: 70%;
    margin: auto;
    text-align: left;
}
.logo {
	margin:18px 15px -10px 12px;
	width:30px;

